@@ -1,4 +1,4 @@
-# $Id: sample-ngircd.conf,v 1.37 2006/04/09 12:27:23 alex Exp $
+# $Id: sample-ngircd.conf,v 1.38 2006/11/05 13:03:47 fw Exp $
 
 #
 # This is a sample configuration file for the ngIRCd, which must be adepted
@@ -92,6 +92,9 @@
 	# Mask IRC Operator mode requests as if they were coming from the
 	# server? (This is a compatibility hack for ircd-irc2 servers)
 	;OperServerMode = no
+
+	# Allow Pre-Defined Channels only (see Section [Channels])
+	;PredefChannelsOnly = no
 
 	# Maximum number of simultaneous connection the server is allowed
 	# to accept (<=0: unlimited):
